# arq-ui

./: .dockerignore  .gitattributes  .gitignore  .releaserc  Dockerfile  README.md  arq-ui.code-workspace  docker-compose.dev.yml  package-lock.json  package.json
.github/workflows/: commit.yml  main.yml  pr.yml  rc.yml
backend/: .dockerignore  Dockerfile.dev  README.md  pyproject.toml
backend/src/: example.env  main.py
backend/src/core/: cache.py  config.py  depends.py  exception_handler.py  helpers.py
backend/src/endpoints/: api.py  jobs.py  status.py
backend/src/schemas/: job.py  paged.py  problem.py
backend/src/services/: arq_service.py  job_service.py
backend/src/worker/: models.py  task_creator.py  worker.py
docs/: README_en.md  README_ru.md
frontend/: .env.development  .env.production  .eslintrc.cjs  Dockerfile.dev  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: index.ts  types.ts
frontend/src/components/: filters.tsx  footer.module.css  footer.tsx  header.module.css  header.tsx  statistics.module.css  statistics.tsx  tablejobs.module.css  tablejobs.tsx  timeline.module.css  timeline.tsx
frontend/src/components/tablejobs/: tablejobs.tsx
frontend/src/stores/: RootStore.ts  index.ts  models.ts
